fixed gap

--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,7 @@ h5 {
 h6 {
     font-size: 16px;
     margin-top: 0px;
+    margin-bottom: 3px;
 }
 
 a {
